# stufio-modules-events

./: README.md  pyproject.toml
docs/: background_tasks.md  handler_responses.md
stufio/modules/events/: __init__.py  config.py  consumer_registry.py  event_bus.py  event_registry.py  events.py  helpers.py  kafka_client.py  module.py  patches.py  settings.py
stufio/modules/events/api/: __init__.py  admin_events.py  admin_topics.py  events.py
stufio/modules/events/consumers/: __init__.py  asyncapi.py  asyncapi_init.py  asyncapi_patches.py  asyncapi_site.py  clickhouse_event_log.py  kafka.py  publisher_registry.py  topic_initializer.py
stufio/modules/events/crud/: __init__.py  crud_error_log.py  crud_event_definitions.py  crud_event_log.py  crud_event_metrics.py  crud_event_subscriptions.py  crud_topics.py
stufio/modules/events/decorators/: metrics.py
stufio/modules/events/metrics/: __init__.py  db_providers.py  providers.py  registry.py
stufio/modules/events/middleware/: __init__.py  base.py  event_tracking.py
stufio/modules/events/migrations/v20250329/: 01_create_event_logs.py  02_create_event_collections.py
stufio/modules/events/models/: __init__.py  error_log.py  event.py  event_metrics.py
stufio/modules/events/schemas/: __init__.py  base.py  error.py  event.py  event_definition.py  event_metrics.py  handler.py  messages.py  payloads.py  topic.py
stufio/modules/events/services/: background_tasks.py  consumer_registry.py  event_bus.py  event_registry.py  publisher_registry.py
stufio/modules/events/utils/: context.py  timestamps.py
(+6 files in other folders)
