[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stufio-modules-events"
version = "0.1.0"
description = "Stufio.com Module: Event-driven architecture support"
authors = [{name = "Ihar Finchuk", email = "if@if.codes"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "stufio>=0.1.0",
    "motor>=2.5.0",  # MongoDB driver
    "redis>=4.0.0",  # Redis client
    "fastapi>=0.68.0",  # FastAPI framework
    "faststream>=0.5.0",  # FastAPI event stream
    "PyYAML>=5.4.1",  # YAML parser
]

[project.urls]
repository = "https://github.com/stufio-com/stufio-modules-events"

[tool.setuptools]
package-dir = {"stufio.modules.events" = "stufio/modules/events"}
packages.find = {include = ["stufio.modules.events", "stufio.modules.events.*"]}